--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "browserify src/app.js -o public/js/app.js -d",
-    "start": "http-server -c-1 -p 12345 public"
+    "start": "http-server -c-1 -p 12345 public",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public"
   },
   "author": "Pedro Teixeira <i@pgte.me>",
   "license": "MIT",
@@ -17,6 +19,7 @@
     "y-ipfs-connector": "^1.2.1",
     "y-memory": "^8.0.9",
     "y-text": "^9.5.1",
-    "yjs": "^12.3.3"
+    "yjs": "^12.3.3",
+    "gh-pages": "^1.0.0"
   }
 }
